# role-ros2

./: .cursorrules  .gitignore  .gitmodules  ARCHITECTURE.md  CARTESIAN_POSE_TEST.md  CMakeLists.txt  CONTROL_TESTING.md  DEPENDENCIES.md  FRANKAROBOT.md  MIGRATION_PYTHON310.md  PARAMETERS.md  README.md  RVIZ2_TROUBLESHOOTING.md  TESTING.md  TEST_RESULTS_ANALYSIS.md  package.xml  quick_build.sh  quick_rebuild.sh
action/: MoveToPose.action
config/: allegro_hand_config.yaml  bimanual_franka_robot_config.yaml  calibration_results.yaml  collect_traj.rviz  collect_trajectory_config.yaml  factr_teleop_config.yaml  franka_robot_config.yaml  franka_robot_config_v2.yaml  hand_camera_params.yaml  joint_names.yaml  multi_camera_reader_config.yaml  oculus_reader_config.yaml  realsense_cameras_config_high_res.yaml  realsense_cameras_config_low_res.yaml  static_camera_params.yaml  vr_policy_config.yaml  xarm_robot_config.yaml  zed_cameras_config.yaml  zed_cameras_config_high_res.yaml  zed_cameras_config_low_res.yaml
config/cameras/: hand_realsense_high_res.yaml  hand_realsense_low_res.yaml  hand_zed_high_res.yaml  hand_zed_low_res.yaml  static_realsense_high_res.yaml  static_realsense_low_res.yaml  static_zed_high_res.yaml  static_zed_low_res.yaml
config/rviz/: collect_traj.rviz
docker/: Dockerfile.ros2_polymetis  KNOWN_ISSUES.md  README.md  README_CROSS_CONTAINER.md  docker-compose.yaml  entrypoint.sh  fastrtps_profile.xml  install.md
docker/polymetis/: Dockerfile.ros2_polymetis  cyclonedds.xml  docker-compose.yaml  entrypoint.sh  polymetis_ros2.env
docker/ros2_allegro/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  ros2_allegro.env  smoke_test.sh
docker/ros2_cu118/: Dockerfile  Dockerfile.ros2_cu118  README.md  cyclonedds.xml  (+6 more)
launch/: allegro_hand_robot.launch.py  bimanual_franka_robot.launch.py  collect_trajectory.launch.py  droid_cameras.launch.py  franka_robot.launch.py  franka_robot_v2.launch.py  launch_robot.launch.py  oculus_controller.launch.py  oculus_reader.launch.py  realsense_camera.launch.py  realsense_cameras.launch.py  vr_teleoperation.launch.py  xarm_robot.launch.py  zed_camera.launch.py  zed_cameras.launch.py
misc/: control_analysis.py  hdf5_reader.py  label_data.py  trajectory_visualizer.py
msg/: AggregatedRobotState.msg  ArmState.msg  CartesianPositionCommand.msg  CartesianVelocityCommand.msg  ControllerStatus.msg  GripperCommand.msg  GripperState.msg  HandState.msg  JointPositionCommand.msg  JointVelocityCommand.msg  OculusButtons.msg  PolymetisCommand.msg  PolymetisGripperState.msg  PolymetisRobotCommand.msg  PolymetisRobotState.msg  RobotState.msg  VRPolicyAction.msg
nodes/: allegro_hand_interface_node.py  camera_calibration_tf_publisher_node.py  franka_gripper_interface_node.py  franka_robot_interface_node.py  oculus_reader_node.py  polymetis_bridge_node.py  robot_state_aggregator_node.py  xarm_robot_interface_node.py
role_ros2/: pyproject.toml  robot_env.py  setup.py  utils.py
role_ros2/calibration/: __init__.py  calibration_utils.py  config.py
role_ros2/camera/: multi_camera_wrapper.py  ros2_camera_reader.py
role_ros2/camera_utils/: fake_camera_publisher.py  info.py  multi_camera_config.yaml  multi_camera_wrapper.py  ros2_camera_reader.py
role_ros2/controllers/: __init__.py  base_controller.py  oculus_controller.py
role_ros2/controllers/factr/: __init__.py  config.py  dynamixel_driver.py  factr_leader.py  factr_policy.py
role_ros2/franka/: base_robot.py  robot.py
role_ros2/misc/: config_loader.py  parameters.py  ros2_utils.py  subprocess_utils.py  time.py  transformations.py  urdf_utils.py
role_ros2/oculus/: __init__.py
role_ros2/robot/: __init__.py  base_robot.py  robot.py
role_ros2/robot/franka/: __init__.py  bimanual_robot.py  robot.py  robot_v2.py
role_ros2/robot/xarm/: __init__.py  robot.py
role_ros2/robot_ik/: __init__.py  arm.py  robot_ik_solver.py
role_ros2/robot_ik/franka/: bimanual_fr3_w_soft_fin.urdf  fr3.urdf  fr3_w_fin.urdf  fr3_w_soft_fin.urdf
role_ros2/robot_ik/xarm/: xarm6.urdf
role_ros2/trajectory_utils/: __init__.py  collect_trajectory_base.py  misc.py  trajectory_reader.py  trajectory_writer.py
scripts/: INTERFACE_VERIFICATION.md  README.md  bringup.py  calibrate_camera.py  collect_trajectory.py  collect_trajectory_ac.py  collect_trajectory_bimanual_franka.py  collect_trajectory_factr_franka.py  collect_trajectory_franka.py  collect_trajectory_node.py  config.json  factr_set_latency_timer.sh  fake_joint_states_publisher.py  kill_all.sh  launch_gripper.sh  launch_robot.sh  monitor_offset_consistency.py  monitor_vr_action.py  mujoco_to_urdf.py  oculus_reader_node.py  polymetis_bridge_node.py  polymetis_manager.py  replay_trajectory.py  replay_trajectory_node.py  teleoperation_node.py  test_cartesian_pose_control.py  test_cartesian_velocity_control.py  test_franka_controllers.py  test_joint_position_control.py  test_joint_velocity_control.py  test_polymetis_bridge.py  test_publish.py  test_required_components.py  test_ros2_polymetis.py  test_teleoperation_fake.py  test_vr_action_follow.py  vr_policy_node.py
srv/: ComputeFK.srv  ComputeTimeToGo.srv  GraspPrimitive.srv  GripperGoto.srv  GripperGrasp.srv  Home.srv  MoveToEEPose.srv  MoveToJointPositions.srv  Reset.srv  SolveIK.srv  StartCartesianImpedance.srv  StartJointImpedance.srv  StartJointVelocity.srv  TerminatePolicy.srv
tests/: fake_camera_publisher.py  fake_joint_states_publisher.py  run_test_robot_env.sh  test_camera_reader_simple.py  test_camera_robot_sync.py  test_franka_robot_get_state.py  test_layer1_camera_reader.py  test_multi_camera_reader.py  test_multi_camera_wrapper_functions.py  test_non_blocking_commands.py  test_oculus_controller_consistency.py  test_polymetis_bridge.py  test_polymetis_dependencies.py  test_polymetis_dependencies.sh  test_robot.py  test_robot_env.py  test_robot_env_observation.py  test_robot_v2.py  test_ros2_camera_reader.py  test_ros2_communication.py  test_ros2_vr_policy.py  test_single_camera_fps.py  test_teleoperation_node.py  test_topic_name_check.py  test_topic_sync.py  test_vr_policy_node.py
(+64 files in other folders)
